Finition du footer et du Activité correction du gap pour le hebergement et activité

--- a/css/style.css
+++ b/css/style.css
@@ -202,7 +202,6 @@ nav a:hover{
     height:24px;
     text-align: center;
     padding-top: 5px;
-    background-position: ;
     border:var(--main-bg-color) solid 1px;
     border-radius: 50%;
     margin-right: 15px;
@@ -234,18 +233,21 @@ nav a:hover{
 }
 
 .hebergements-cards {
+    gap:30px;/* width?*/
     display:flex;
     flex-direction: row;
     justify-content: space-around;
     flex-wrap: wrap;
     margin-top:2rem;
+    margin-bottom:2rem;
+    
 }
 .hebergements-cards .card{
     width:230px;
     height:233px;
     display:flex;
     flex-direction:column;
-    margin-bottom:2rem;
+    box-sizing: border-box;
 
 }
 .hebergements-cards img{
@@ -318,7 +320,57 @@ nav a:hover{
     margin-bottom: 5px;
 }
 
+/******** Activité **********/
+.activity {
+    padding:30px;
+}
+.activity-title {
+    margin-top:2rem;
+    margin-bottom: 2rem;
+}
+.activity-cards {   
+    gap:30px; 
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
 
+
+}
+.activity-cards .card {
+    width:100%;
+    height:380px;
+    display:flex;
+    flex-direction: column;
+    padding:0; /* to put img over card*/
+}
+.activity-cards img{
+    width:100%;
+    height: 300px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
+.activity-cards .card-text {
+    margin-top: 1rem;
+    margin-left:1rem;
+}
+
+/********* Footer *********/
+footer {
+    background-color:var(--main-bg-color);
+}
+footer section{
+    margin-top: 2rem;
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+}
+footer .footer-box_content {
+    padding:20px;
+    width:50%;
+    display: flex;
+    flex-direction: column;
+    gap:20px;
+}
 
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
